# ai-company

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .grype.yaml  .markdownlint.json  .pre-commit-config.yaml  .slopconfig.yaml  .zizmor.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN_SPEC.md  LICENSE  README.md  SECURITY.md  atlas.hcl  codecov.yml  d2_fence.py  mkdocs.yml  opencode.json  package-lock.json  pyproject.toml  renovate.json  synthorg.db-shm  synthorg.db-wal  wrangler.jsonc
.claude/: hookify.enforce-parallel-tests.md  hookify.missing-logger.md  hookify.no-atlas-rehash.md  hookify.no-cd-prefix.md  hookify.no-local-coverage.md  hookify.no-manual-atlas-sum.md  settings.json
.claude/agents/: design-token-audit.md  diagram-syntax-validator.md  go-reviewer.md  persistence-reviewer.md  python-reviewer.md  security-reviewer.md
.github/: .grype.yaml  .trivyignore.yaml  .zizmor.yml  CHANGELOG.md  CLA.md  CODEOWNERS  CONTRIBUTING.md  SECURITY.md  branch_protection.yml  dependabot.yml  labels.yml  package-lock.json  package.json  release-please-config.json  zap-rules.tsv
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  installer-failure.yml
.github/workflows/: apko-lock.yml  auto-rollover.yml  ci-preflight.yml  ci.yml  cla.yml  cli.yml  dast.yml  dependabot-auto-merge.yml  dependency-review.yml  dev-release.yml  docker.yml  evals.yml  finalize-release.yml  graduate.yml  pages-preview.yml  pages.yml  python-audit.yml  release-events.yml  release-pipeline-health.yml  release.yml  sbom-diff.yml  scorecard.yml  secret-scan.yml  sync-labels.yml  test-highlights.yml  test-signing.yml  zizmor.yml
.opencode/agents/: comment-analyzer.md  conventions-enforcer.md  design-token-audit.md  diagram-syntax-validator.md  docs-consistency.md  go-conventions-enforcer.md  go-reviewer.md  go-security-reviewer.md  infra-reviewer.md  issue-resolution-verifier.md  persistence-reviewer.md  pr-test-analyzer.md  python-reviewer.md  resilience-audit.md  security-reviewer.md
.opencode/commands/: analyse-logs.md  aurelio-review-pr.md  codebase-audit.md  post-merge-cleanup.md  pre-pr-review.md  research-link.md  review-dep-pr.md  worktree.md
.opencode/plugins/: memory.ts  synthorg-hooks.ts
cli/: .goreleaser.yml  CLAUDE.md  coverage.out  go.mod  go.sum  main.go
cli/cmd/: backup.go  backup_test.go  cleanup.go  completion_install.go  config.go  config_changelog_view_test.go  config_ext_test.go  config_test.go  config_tunables.go  config_tunables_test.go  custom_registry_test.go  doctor.go  doctor_report.go  doctor_test.go  envvars.go  exitcodes.go  exitcodes_test.go  flags_test.go  global_opts.go  global_opts_test.go  init.go  init_fine_tune_test.go  init_postgres_test.go  init_tui.go  init_tui_view.go  logs.go  root.go  setup.go  start.go  start_test.go  status.go  status_test.go  stop.go  uninstall.go  uninstall_test.go  update.go  update_cleanup.go  update_cleanup_test.go  update_compose.go  update_health.go  (+11 more)
cli/scripts/: install.ps1  install.sh
cli/testdata/: compose_custom_ports.yml  (+3 more)
data/: competitors.yaml
docker/: .env.example  compose.distributed.yml  compose.fine-tuning-cpu.yml  compose.fine-tuning-gpu.yml  compose.override.yml  compose.yml
docs/: DESIGN_SPEC.md  cross-deployment-privacy.md  errors.md  getting_started.md  index.md  licensing.md  rest-api.md  security.md  user_guide.md
mockups/: Containerfile  nginx.conf
mockups-v2/: Dockerfile  package-lock.json
scripts/: _logger_exception_baseline.json  _web_design_patterns.py  _workflow_shell_git_commits_baseline.json  audit_branch_protection.sh  check_backend_regional_defaults.py  check_bash_no_write.sh  check_doc_drift_counts.py  check_forbidden_literals.py  check_git_c_cwd.sh  check_logger_exception_str_exc.py  check_no_atlas_rehash.sh  check_no_edit_baseline.sh  check_no_edit_migration.sh  check_no_em_dashes.py  check_no_modify_migration.sh  check_no_redundant_timeout.py  check_no_release_please_token.py  check_openapi_liveness.py  check_orphan_fixtures.py  check_persistence_boundary.py  check_pre_pr_review_triage_gate.sh  check_push_rebased.sh  check_single_migration_per_pr.sh  check_web_design_system.py  check_workflow_shell_git_commits.py  cis-scan.sh  compute_release_cadence.py  configure_environments.sh  evaluate-scan.sh  export_openapi.py  extract_web_strings.py  generate_comparison.py  install_cli_tools.sh  issue_analyzer.py  patch_sitemap.py  report-image-size.sh  run_affected_mypy.py  run_affected_tests.py  squash_migrations.sh  validate-tmpfs.sh  (+1 more)
site/: astro.config.mjs  package-lock.json  package.json  vitest.config.ts
tests/: conftest.py
web/: .env.example  .npmrc  CLAUDE.md  Caddyfile  app.js  env.d.ts  eslint.config.js  index.html  lighthouserc.js  nginx.conf  package-lock.json  package.json  playwright.config.ts  security-headers.conf  style.css  tsconfig.json  vite.config.ts  vitest.config.ts
(+4807 files in other folders)
