[project]
name = "ai-company"
dynamic = ["version"]
description = "Framework for orchestrating autonomous AI agents within a virtual company structure"
readme = "README.md"
license = "BUSL-1.1"
requires-python = ">=3.14"
authors = [{ name = "Aurelio" }]
keywords = ["ai", "agents", "llm", "orchestration", "company"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/ai_company/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_company"]
